# simplylab-rs

./: .env  .env.example  .gitignore  Cargo.toml  Dockerfile  LICENSE  README.md  Rocket.toml  docker-compose.mongodb.yml  docker-compose.yml
src/: conf.rs  error.rs  main.rs  route.rs
src/model/: deser.rs  entity.rs  mod.rs  req.rs  res.rs  table.rs
src/providers/: chat.rs  mod.rs  openrouter.rs  ping.rs  user.rs
src/services/: chat.rs  mod.rs  ping.rs
src/store/: api_client.rs  cache.rs  database.rs
