[package]
name = "simplylab"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
tokio = { version = "1.35.1", features = ["full"] }
chrono = { version = "0.4.31", features = ["serde"] }
serde = { version = "1.0.195", features = ["derive"] }
serde_json = "1.0.111"
schemars = { version = "0.8.16", features = ["uuid1", "chrono", "bigdecimal03"] }
dotenv = "0.15.0"
dotenvy = "0.15.7"
futures = "0.3.30"
thiserror = "1.0.56"
anyhow = "1.0.79"
lazy_static = "1.4.0"
rocket = { version = "0.5.0", features = ["json", "uuid"] }
okapi = "0.7.0"
rocket_okapi = { version = "0.8.0", features = ["uuid", "rocket_db_pools", "rocket_ws", "swagger", "rapidoc"] }
redis = { version = "0.24.0", features = ["aio", "tokio-comp", "connection-manager"] }
reqwest = { version = "0.11.23", features = ["json"] }
url = { version = "2.5.0", features = ["serde"] }
sea-query = { version = "0.30.7", features = ["derive", "attr", "thread-safe", "backend-mysql", "with-chrono", "with-time", "with-json", "with-rust_decimal", "with-bigdecimal", "with-uuid"] }
uuid7 = { version = "0.7.2", features = ["serde", "uuid"] }
bigdecimal = { version = "0.3.1", features = ["serde"] }
sqlx = { version = "0.7.3", features = ["postgres", "sqlx-postgres", "uuid", "chrono", "bigdecimal", "runtime-tokio-rustls"] }
sqlx-postgres = { version = "0.7.3", features = ["bigdecimal"] }
sentry = { version = "0.32.1", default-features = false, features = ["reqwest", "rustls", "backtrace", "contexts", "panic", "transport"] }
regex = "1.10.2"
clap = { version = "4.4.16", features = ["derive"] }
calamine = "0.23.1"
csv = "1.3.0"
proc-macro2 = "1.0.76"
mongodb = {version = "2.8.2", features = ["bson-chrono-0_4", "bson-serde_with"]}
log = "0.4.17"
async-openai = "0.19.1"

[dependencies.rocket_db_pools]
version = "0.1.0"
features = ["sqlx_mysql"]

[dependencies.uuid]
version = "1.6.1"
features = [
    "v4", # Lets you generate random UUIDs
    "serde",
    "fast-rng", # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
